--- a/frontend/templates/themes_admin/inscription.html
+++ b/frontend/templates/themes_admin/inscription.html
@@ -24,7 +24,7 @@
                         <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px; max-width=50%;">
                     </div>                        
                     <div class="col-lg-6">
-                        <h1 class="mb-3">Création des comptes utilisateurs</h1>
+                        <h1 class="mb-3"><strong>Création des comptes utilisateurs</strong></h1>
                         <form method="post" action="{% url 'inscription' %}">
                             {% csrf_token %}
                             <div class="form-row">
