--- a/frontend/templates/themes_client/about.html
+++ b/frontend/templates/themes_client/about.html
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 site-section-heading text-center pt-4">
-            <h2>The Team</h2>
+            <h2>Notre Team</h2>
           </div>
         </div>
         <div class="row">
@@ -125,10 +125,10 @@
                 <div class="block-38-header">
                   <img src="{% static 'themes_client/images/person_1.jpg' %}" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Elizabeth Graham</h3>
-                  <p class="block-38-subheading">CEO/Co-Founder</p>
+                  <p class="block-38-subheading">CEO/Co-Fondateur</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>"Chez PharmApp, nous mettons la santé de nos clients au cœur de toutes nos actions, en offrant des solutions innovantes et accessibles pour un bien-être optimal."</p>
                 </div>
               </div>
             </div>
@@ -139,10 +139,10 @@
                 <div class="block-38-header">
                   <img src="{% static 'themes_client/images/person_2.jpg' %}" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Jennifer Greive</h3>
-                  <p class="block-38-subheading">Co-Founder</p>
+                  <p class="block-38-subheading">Co-Fondateur</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>"En tant que Co-Fondateur de PharmApp, je m'engage à transformer l'accès aux soins de santé en offrant des solutions modernes et fiables à nos clients." </p>
                 </div>
               </div>
             </div>
@@ -153,10 +153,10 @@
                 <div class="block-38-header">
                   <img src="{% static 'themes_client/images/person_3.jpg' %}" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Patrick Marx</h3>
-                  <p class="block-38-subheading">Marketing</p>
+                  <p class="block-38-subheading">Responsable Marketing</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>"En tant que Responsable Marketing, mon objectif est de faire connaître PharmApp à chaque foyer, en mettant en avant notre engagement envers la qualité et la satisfaction de nos clients."</p>
                 </div>
               </div>
             </div>
@@ -167,10 +167,10 @@
                 <div class="block-38-header">
                   <img src="{% static 'themes_client/images/person_4.jpg' %}" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Mike Coolbert</h3>
-                  <p class="block-38-subheading">Sales Manager</p>
+                  <p class="block-38-subheading">Responsable des ventes</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>"En tant que Responsable Marketing, mon objectif est de faire connaître PharmApp à chaque foyer, en mettant en avant notre engagement envers la qualité et la satisfaction de nos clients."</p>
                 </div>
               </div>
             </div>
