--- a/frontend/templates/themes_admin/homepage_prepa.html
+++ b/frontend/templates/themes_admin/homepage_prepa.html
@@ -1,104 +1,174 @@
 {% extends "themes_admin/add_category.html" %}
 {% block content %}
-{% load static %}
-<style>
-    body, html {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        font-family: 'Arial', sans-serif;
-        background-color: #f4f4f9;
-    }
-
-    .background {
-        background-image: url('{% static "themes_admin/img/phar.jpg" %}');
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        height: 100vh; /* Full viewport height */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
-
-    .centered-text {
-        color: white;
-        font-size: 64px;
-        font-weight: bold;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        text-align: center;
-        margin: 0;
-    }
-
-    .content-container {
-        max-width: 800px;
-        padding: 20px;
-        background: rgba(255, 255, 255, 0.9);
-        border-radius: 10px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        margin: 40px auto;
-        text-align: center;
-        animation: fadeIn 1.5s ease-in-out;
-    }
-
-    .title {
-        font-size: 36px;
-        color: #333;
-        margin-bottom: 20px;
-    }
-
-    .description {
-        font-size: 18px;
-        color: #666;
-        line-height: 1.6;
-        text-align: justify;
-        margin-bottom: 20px;
-    }
-
-    .description strong {
-        color: #333;
-    }
-
-    .cta-button {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 18px;
-        color: #fff;
-        background-color: #03BB00;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease-in-out;
-        text-decoration: none;
-    }
-
-    .cta-button:hover {
-        background-color: #028a07;
-    }
-
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-            transform: translateY(20px);
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .card {
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
-        to {
-            opacity: 1;
-            transform: translateY(0);
+        .card-header {
+            font-weight: bold;
         }
-    }
-</style>
+        .chart-container {
+            height: 300px; /* Ajustez la hauteur selon vos besoins */
+            width: 100%;
+            position: relative;
+        }
+        .dashboard {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+            background-color: #f4f4f9;
+        }
+    
+        .stats-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            width: 100%;
+        }
+    
+        .stat-box {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 250px;
+            text-align: center;
+            color: #fff;
+        }
+    
+        .stat-box h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+    
+        .stat-box p, .stat-box ul {
+            font-size: 20px;
+        }
+    
+        .stat-box ul {
+            list-style: none;
+            padding: 0;
+        }
+    
+        .stat-box ul li {
+            font-size: 18px;
+        }
+        
+        /* Colors for each stat-box */
+        .stat-box-1 {
+            background-color: #4e73df;
+        }
+        .stat-box-2 {
+            background-color: #f6c23e;
+        }
+        .stat-box-3 {
+            background-color: #1cc88a;
+        }
+        .stat-box-4 {
+            background-color: #36b9cc;
+        }
 
-<div class="background">
-    <div class="centered-text">Bienvenue Préparateur de <br> la pharmacie PharmApp</div>
-</div>
+        .statistics-container {
+            display: flex;
+            justify-content: space-between;
+        }
+        .statistics-card {
+            width: 48%;
+            padding: 15px;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        canvas {
+            width: 100% !important;
+            height: 100% !important;
+        }
+        
+    </style>
+    <div class="container">
+        <!-- Widget Row -->
+        <div class="stats-container">
+            <div class="stat-box stat-box-1">
+                <h3>Total des Médicaments Créés</h3>
+                <p>{{ total_medicaments }}</p>
+            </div>
+            
+            <div class="stat-box stat-box-3">
+                <a href="{% url 'notification_date_expired' %}">           
+                    <h3>Médicaments Expirés</h3>
+                </a>
+                <p>{{ expired_medicaments }}</p>
+            </div>
+            <div class="stat-box stat-box-4">
+                <a href="{% url 'notification_out_of_stock' %}">           
+                    <h3>Médicaments à réapprovisionner</h3>
+                </a>
+                <p>{{ medicament_modifications }}</p>
+            </div>
+            <div class="stat-box stat-box-2">
+                <h3>Médicaments par Catégorie</h3>
+                <ul>
+                    {% for category, count in medicaments_by_category.items %}
+                    <li>{{ category }}: {{ count }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+    </div>
+        <br><br>
+        <div class="container mt-5">
+            <h5 class="card-title">Graphique Annuel des Achats et ventes</h5>
+            <div class="chart-container">
+                <canvas id="achatVenteChart"></canvas>
+            </div>
+        </div>
 
-<div class="content-container">
-    <h2 class="title">Bienvenue à PharmApp</h2>
-    <p class="description">
-        Découvrez notre large gamme de médicaments et profitez de nos services de santé en ligne. Chez <strong>PharmApp</strong>, nous nous engageons à vous fournir les meilleurs produits et conseils pour votre bien-être.
-    </p>
-</div>
+        <br><br>
 
-{% endblock content %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        // Main Chart
+        
+        const ctx = document.getElementById('achatVenteChart').getContext('2d');
+
+        const achatVenteChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '30'],
+                datasets: [{
+                    label: 'Ventes',
+                    data: [100, 200, 150, 300, 250, 350, 200, 400, 300, 500, 350, 450, 400, 600, 500, 650, 400, 700, 550, 750, 600, 700, 650, 800, 700, 850, 750, 800, 700, 850],
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1,
+                    fill: true,
+                    tension: 0.4
+                }, {
+                    label: 'Achats',
+                    data: [80, 160, 120, 180, 140, 220, 180, 260, 200, 300, 240, 280, 250, 350, 300, 370, 330, 390, 350, 420, 360, 400, 380, 430, 400, 450, 420, 470, 430, 480],
+                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                    borderColor: 'rgba(54, 162, 235, 1)',
+                    borderWidth: 1,
+                    fill: true,
+                    tension: 0.4
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+        
+
+
+    </script>
+{% endblock %}
